--- a/synapse/users/templates/users/new-ui/user_signup.html
+++ b/synapse/users/templates/users/new-ui/user_signup.html
@@ -22,8 +22,8 @@
     >
     {% csrf_token %}
       <div class="input-wrapper">
-        <label>Email Address</label>
-        <input type="text" class="sf-input-ls" name="email" id="email" value="{{ user_form.data.email }}">
+        <label for="email">Email Address</label>
+        <input type="text" class="sf-input-ls" name="email" id="email" value="{{ user_form.data.email }}" placeholder="you@example.com">
         {% if user_form.errors.email %}
           <ul class="field_errors">
             {% for error in user_form.errors.email %}
@@ -31,10 +31,10 @@
             {% endfor %}
           </ul>
         {% endif %}
-        </div>
+      </div>
       <div class="input-wrapper">
-        <label>Password</label>
-        <input type="password" class="sf-input-ls" name="password" id="password">
+        <label for="password">Password</label>
+        <input type="password" class="sf-input-ls" name="password" id="password" placeholder="Create a strong password">
         {% if user_form.errors.password %}
           <ul class="field_errors">
             {% for error in user_form.errors.password %}
@@ -44,8 +44,8 @@
         {% endif %}
       </div>
       <div class="input-wrapper">
-        <label>I want to use Synapse as</label>
-        <select name="user_role" class="sf-select-ls" required>
+        <label for="user_role">I want to use Synapse as</label>
+        <select name="user_role" id="user_role" class="sf-select-ls" required>
           <option value="" disabled selected>Select one</option>
           <option value="client">Client (create projects)</option>
           <option value="annotator">Annotator (label data)</option>
@@ -53,7 +53,7 @@
       </div>
 
       <div class="input-wrapper">
-        <label>How did you hear about Synapse?</label>
+        <label for="how_find_us">How did you hear about Synapse?</label>
         <select class="sf-select-ls" name="how_find_us" id="how_find_us">
           <option disabled value="" {% if not form.data.how_find_us %}selected{% endif %}>Select an option</option>
           {% for choice in found_us_options %}
@@ -62,9 +62,8 @@
         </select>
       </div>
       <div class="input-wrapper" id="elaborateContainer" {% if user_form.data.how_find_us != elaborate %}style="display:none;"{% endif %}> 
-        <label>Please elaborate</label>
-        <input class="sf-input-ls" name="elaborate" id="elaborate" {% if user_form.data.how_find_us == elaborate %}value="{{ user_form.data.elaborate }}"{% endif %}>
-        </select>
+        <label for="elaborate">Please elaborate</label>
+        <input class="sf-input-ls" name="elaborate" id="elaborate" {% if user_form.data.how_find_us == elaborate %}value="{{ user_form.data.elaborate }}"{% endif %} placeholder="Tell us more">
       </div>
 
       {% if form.non_field_errors %}
@@ -74,11 +73,11 @@
           </p>
         {% endfor %}
       {% endif %}
-      <p><button type="submit" aria-label="Create Account" class="sf-button-ls sf-button-ls_look_primary">Create Account</button></p>
+      <button type="submit" aria-label="Create Account" class="sf-button-ls sf-button-ls_look_primary">Create Account</button>
     </form>
   </div>
   <div class="text-wrapper">
-    <p class="">Already have an account?</p>
+    <p>Already have an account?</p>
     <a href="{% url 'user-login' %}{% querystring %}">Log in</a>
   </div>
   <script>
